Add ingestion pipeline status endpoint
PR: https://github.com/JonathanGWesterfield/Librarian/pull/51
